// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-radial-loading #render should render component as expected (1) 1`] = `
<gux-radial-loading-beta>
  <div aria-busy="true" class="modal spinner-container">
    <div class="spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;

exports[`gux-radial-loading #render should render component as expected (2) 1`] = `
<gux-radial-loading-beta context="modal">
  <div aria-busy="true" class="modal spinner-container">
    <div class="spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;

exports[`gux-radial-loading #render should render component as expected (3) 1`] = `
<gux-radial-loading-beta context="full-page">
  <div aria-busy="true" class="full-page spinner-container">
    <div class="spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;

exports[`gux-radial-loading #render should render component as expected (4) 1`] = `
<gux-radial-loading-beta context="input">
  <div aria-busy="true" class="input spinner-container">
    <div class="spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;
